# llama-launcher

./: .chunkhound.json  .gitignore  AGENTS.md  DOCUMENTATION.md  GAINED_KNOWLEDGE.md  PLAN.md  PROGRESS.md  README.md  SOUL.md  cleanup.sh  config.yaml  llama-launcher  package-lock.json  package.json  pyproject.toml  requirements.txt  run  test_launcher.py  test_output.txt
.sisyphus/: ralph-loop.local.md
backend/: AGENTS.md  __init__.py  api_server.py  benchmark.py  benchmark_tasks.py  cli.py  config.py  config_store.py  constants.py  context.py  daemon.py  download.py  gpu_detector.py  ini_writer.py  llama_runner.py  model_aliases.json  model_cards.py  model_manager.py  process_manager.py  sleep_inhibitor.py
docs/: API.md  ARCHITECTURE.md  CLI_REFERENCE.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md
llama_launcher/: AGENTS.md  __init__.py  benchmark.py  cli.py  config.py  config_store.py  context.py  daemon.py  download.py  exceptions.py  llama_runner.py  logger.py  model_cards.py  model_manager.py  process_manager.py
plan/: PLAN.md
prompts/: 00_prompt  03_cleanup_01.md  04_fix_launch_settings_01.md  05_ui_improvements_01  06_more_fixes  07_improvements_01.md  07_improvements_02.md  07_improvements_03.md  07_improvements_04.md  07_improvements_05.md  07_improvements_06.md  07_improvements_07.md  07_improvements_08.md  07_improvements_09.md  08_todo  08_todo_improved  e2e-test-plan.md
tests/: AGENTS.md  e2e_test.py  test_benchmark.py  test_benchmark_defaults.py  test_benchmark_extended.py  test_benchmark_types.py  test_config.py  test_constants.py  test_daemon.py  test_ini_loader.py  test_integration.py  test_llama_runner.py  test_llama_runner_extended.py  test_logger_extended.py  test_logging.py  test_logs_parsing.py  test_model_manager.py  test_model_manager_coverage.py  test_model_manager_extended.py  test_model_scanner.py  test_server_list_fields.py
todos/: make_ui  todo_01
tools/: prompt_check.py  prompt_quality.py
ui/: .env  .env.example  AGENTS.md  eslint.config.js  index.html  launcher.py  package-lock.json  (+10 more)
(+72 files in other folders)
