[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-launcher"
version = "0.1.0"
description = "Powerful CLI tool for managing and running LLaMA.cpp models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "huggingface-hub>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[project.scripts]
llama-launcher = "llama_launcher.cli:cli"

[tool.setuptools.packages.find]
include = ["llama_launcher*"]
