[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-launcher"
version = "0.1.0"
description = "GUI tool for managing and running LLaMA.cpp models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pywebview>=5.0",
    "pyyaml>=6.0",
    "huggingface-hub>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[project.scripts]
llama-launcher = "ui.launcher:main"
llama-launcher-ui = "ui.launcher:main"

[tool.setuptools.packages.find]
include = ["backend*"]
